--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "mobx-react-devtools": "^4.2.15",
     "webpack": "^3.9.1",
     "webpack-dev-server": "^2.9.5"
   },
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "lodash": "^4.17.4",
+    "mobx": "^3.4.0",
+    "mobx-react": "^4.3.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   }
